welcome-php/welcome-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: welcome-php
  name: welcome-php
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: welcome-php
status:
  loadBalancer: {}
