welcome-php/welcome-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: welcome-php
  name: welcome-php
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: welcome-php
    weight: 100
